(fix): Prevent decoration from overflowing marketing pages

--- a/src/app/common/components/marketing/marketing-styles.scss
+++ b/src/app/common/components/marketing/marketing-styles.scss
@@ -1,6 +1,7 @@
 .m-marketing__main,
 .m-marketing__section {
   // Common
+  overflow-x: hidden;
 
   .m-marketing--hideMobile {
     @media screen and (max-width: $m-grid-min-vp) {
